# Beer_Lambert_Law

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yml
include/: shower.h  simulation.h  thread_pool.h
src/: main.cpp  shower.cpp  simulation.cpp  thread_pool.cpp
tests/: test_simulation.cpp
